[project]
name = "pv-xarray-gallery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.7.0",
    "fsspec>=2025.7.0",
    "h5netcdf>=1.6.4",
    "icechunk>=1.1.3",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "panel>=1.7.5",
    "pyvista>=0.46.1",
    "pyvista-xarray>=0.1.7",
    "rioxarray>=0.19.0",
    "scipy>=1.16.1",
    "trame>=3.12.0",
    "trame-jupyter-extension>=2.1.4",
    "trame-vtk>=2.9.1",
    "vtk>=9.5.0",
    "xarray>=2025.8.0",
    "zarr>=3.1.1",
]

[tool.uv.sources]
pyvista-xarray = { path = "../pyvista-xarray", editable = true }

[dependency-groups]
jupyter = [
    "trame-jupyter-extension>=2.1.4",
]
test = [
    "pan3d[all]>=0.17.0",
]
